# LLAM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  mkdocs.yml
.github/workflows/: benchmarks.yml  bsd.yml  docs.yml  linux.yml  macos.yml  nightly.yml  release.yml  soak.yml  stress.yml
cmake/: llam-config.cmake.in  llam.pc.in
docker/linux/: Dockerfile.ubuntu22  Dockerfile.ubuntu24
docs/: abi.md  build.md  getting-started.md  index.md  macos-performance.md  operations.md  roadmap.md  security.md  windows-roadmap.md
docs/concepts/: execution-model.md  io-model.md  runtime-handles.md  synchronization.md
docs/examples/: blocking-work.md  channels-and-select.md  embedding.md  index.md  runtime-io.md  tasks-and-timers.md
docs/guides/: diagnostics.md  embedding.md  performance-tuning.md
docs/internals/: architecture.md  testing-strategy.md
docs/javascripts/: install-copy.js  mermaid.js
docs/operations/: benchmarks.md  troubleshooting.md  verification.md
docs/project/: documentation-guide.md
docs/reference/: api.md  cli-tools.md  environment.md  options.md  platform-support.md
docs/stylesheets/: extra.css
examples/: bench.c  bench_entry.c  bench_internal.h  bench_support.c  broker.c  demo.c  demo_entry.c  demo_internal.h  demo_tasks.c  diagnostic_output.c  diagnostic_output.h  env_compat.h  server.c  server_flood.c  server_flood_stats.c  server_flood_stats.h  server_flood_stats_internal.h  server_flood_stats_open.c  server_support.c  server_support.h  stress.c  stress_core_cases.c  stress_dynamic_cases.c  stress_entry.c  stress_internal.h  stress_signal_dump.c  stress_suite.c  stress_support.c  stress_tasks.c  stress_timeout_cases.c
include/: nm_platform.h  nm_runtime.h
include/llam/: io.h  nm_platform.h  nm_runtime.h  platform.h  runtime.h
scripts/: audit_c_structure.py  audit_shared_exports.py  bench_go_compare.go  bench_go_windows_compare.go  bench_guard.py  bench_matrix.py  bench_runtime_compare.py  cli_numbers.py  docker_verify_linux.sh  generate_sdk_metadata.sh  install.ps1  install.sh  package_release.sh  package_release_windows.ps1  prepare_ci_artifact_dir.ps1  process_utils.py  run_with_timeout.py  runtime_soak.py  safe_output.py  stress_server.py  stress_server_composite.py  test_bench_parsers.py  test_bench_runtime_compare.py  test_broker_cli_parsing.py  test_c_env_helpers.py  test_example_diagnostic_security.py  test_process_utils.py  test_release_fixture.sh  test_safe_output_security.py  test_server_flood_cli.py  test_server_flood_stats_security.py  test_stress_server_logic.py  verify_darwin.sh  verify_linux.sh  verify_windows.ps1
scripts/bench_tokio_compare/: Cargo.toml
src/core/: runtime.c  runtime_abi.c  runtime_alloc.c  runtime_allocator_quiescent.c  runtime_api.c  runtime_blocking_api.c  runtime_broker.c  runtime_broker_buffer.c  runtime_broker_channel.c  runtime_broker_descriptor.c  runtime_broker_ops.c  runtime_broker_revoke.c  runtime_broker_ring.c  runtime_broker_ring_buffer_grant.c  runtime_broker_ring_dispatch.c  runtime_broker_ring_doorbell.c  runtime_broker_ring_ops.c  runtime_broker_ring_queue.c  runtime_broker_ring_shm.c  runtime_broker_ring_shm_posix.c  runtime_broker_ring_shm_windows.c  runtime_broker_ring_stats.c  runtime_broker_task.c  runtime_broker_transport.c  runtime_broker_transport_dispatch.c  runtime_broker_transport_ops.c  runtime_broker_transport_posix.c  runtime_broker_transport_posix_message.c  runtime_broker_transport_posix_socket.c  runtime_broker_transport_response.c  runtime_broker_transport_ring.c  runtime_broker_transport_rollback.c  runtime_broker_transport_selftest.c  runtime_broker_transport_unix.c  runtime_broker_transport_windows.c  runtime_broker_transport_windows_fd_stubs.c  runtime_broker_transport_windows_pipe.c  runtime_broker_transport_windows_session.c  runtime_broker_validate.c  runtime_broker_windows_security.c  (+62 more)
src/engine/: runtime_block.c  runtime_engine.c  runtime_watchdog.c  runtime_watchdog_internal.h  runtime_watchdog_merge.c  runtime_watchdog_probe.c  runtime_watchdog_rehome.c  runtime_watchdog_scale.c  runtime_watchdog_worker.c
src/internal/: llam_internal.h  nm_internal.h  runtime_broker.h  runtime_broker_ring.h  runtime_broker_windows_security.h  runtime_capability.h  runtime_debug_dump_helpers.h  runtime_internal.h  runtime_platform.h  runtime_proto_core.h  runtime_proto_io.h  runtime_proto_sched.h  runtime_proto_sync.h  runtime_protos.h  runtime_public_active_op.h  runtime_public_slot.h  runtime_public_slot_seal.h  runtime_state.h  runtime_types.h  runtime_windows.h  runtime_windows_compat.h  runtime_windows_iocp.h
src/io/: runtime_io_api.c  runtime_io_api_blocking_file_ops.c  runtime_io_api_blocking_ops.c  runtime_io_api_blocking_wrappers.c  runtime_io_api_datagram.c  runtime_io_api_direct.c  runtime_io_api_direct_tuning.c  runtime_io_api_handle_positional.c  runtime_io_api_internal.h  runtime_io_api_issue.c  runtime_io_api_owned.c  runtime_io_api_positional.c  runtime_io_api_positional_util.c  runtime_io_api_public.c  runtime_io_buffer_registry.c  runtime_io_engine.c  runtime_io_watch.c  runtime_io_watch_close.c  runtime_io_watch_darwin_completion.c  runtime_io_watch_darwin_control.c  runtime_io_watch_darwin_events.c  runtime_io_watch_darwin_internal.h  runtime_io_watch_darwin_migration_live.c  runtime_io_watch_darwin_migration_rehome.c  runtime_io_watch_darwin_state.c  runtime_io_watch_darwin_worker.c  runtime_io_watch_linux_control.c  (+18 more)
tests/: test_abi_compat.c  test_abi_contract.c  test_connect_io.c  test_env.h  test_io_buffers.c  test_multi_runtime_core.c  test_nm_compat_runtime.c  test_runtime_api_edges.c  test_runtime_core.c  test_runtime_fuzz.c  test_runtime_group_local_edges.c  test_runtime_invariants.c  test_runtime_io_dump.c  test_runtime_select_edges.c  test_runtime_shutdown_internal.c  test_runtime_stress.c  test_runtime_unmanaged_join.c  test_security_capability.c  test_shared_load.c  test_sync_primitives.c  test_windows_handle_io.c  test_windows_iocp_dump.c  test_windows_iocp_io.c  test_windows_policy.c  test_windows_runtime_smoke.c
(+207 files in other folders)
